--- a/deck.mdx
+++ b/deck.mdx
@@ -27,7 +27,7 @@ Making the web for everyone.
 <br />
 <br />
 
-Slides available here: [netlify.url.com](url)
+Slides available at [kattow-intro-to-accessibility.netlify.com](kattow-intro-to-accessibility.netlify.com)
 
 </Layout>
 
@@ -340,6 +340,8 @@ Menus, modals... where am I?
 <Layout>
 
 # Additional resources
+
+kattow-intro-to-accessibility.netlify.com
 
 <FlexSplit style={{justifyContent: 'space-around'}}>
 <div>
