better netlify name

--- a/deck.mdx
+++ b/deck.mdx
@@ -27,9 +27,17 @@ Making the web for everyone.
 <br />
 <br />
 
-Slides available at [kattow-intro-to-accessibility.netlify.com](kattow-intro-to-accessibility.netlify.com)
+Slides available at [intro-to-accessibility.netlify.com](intro-to-accessibility.netlify.com)
 
 </Layout>
+
+<Notes>
+
+- if at any point you have trouble seeing, hearing, or understanding me, please speak up and let me know!
+- if you have a question about the content, please write it down and hold it until the end
+- I also want to say that you may see a-11-y in some of my slides, and on some of the resources I've linked out to. A11y is a numeronym for accessibility, which is a numeric shorthand for a word or phrase. So I'm going to say 'accessibility' but I'll often tweet using #a11y
+
+</Notes>
 
 ---
 
@@ -341,7 +349,7 @@ Menus, modals... where am I?
 
 # Additional resources
 
-kattow-intro-to-accessibility.netlify.com
+intro-to-accessibility.netlify.com
 
 <FlexSplit style={{justifyContent: 'space-around'}}>
 <div>
